tests/params/compile-fail/missing_label.rs
prgpu::params! {
	pub enum Params {
		#[slider(range = 0.0..=1.0, default = 0.5)]
		A,
	}
}

fn main() {}
